--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+
 }
 
 body {
@@ -23,20 +24,20 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
-.header main {
+/*adjusted the header and replaced div with nav so the text shows on the left of nav bar*/
+.header nav {
     padding-top: 15px;
-    margin-right: 20px;
+    margin-right: 50px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header section ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header section ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -49,12 +50,12 @@ a {
 p {
     font-size: 16px;
 }
-
+/*had to re-enter image after having it removed from file so it syncs properly to html file */
 .hero {
     height: 800px;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    margin-bottom: 80px auto; 
+    background-image: url("../assets/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
